# k-armed-bandit

./: CMakeLists.txt
results/: changing_results_eps_0.00.txt  changing_results_eps_0.01.txt  changing_results_eps_0.10.txt  comparison_epsilon.txt  comparison_greedy.txt  const_step_0.1_results_eps_0.00.txt  const_step_0.1_results_eps_0.01.txt  const_step_0.1_results_eps_0.10.txt  const_step_alpha_0.00_results_eps_0.10.txt  const_step_alpha_0.01_results_eps_0.10.txt  const_step_alpha_0.10_results_eps_0.10.txt  const_step_alpha_0.50_results_eps_0.10.txt  const_step_alpha_1.00_results_eps_0.10.txt  constant_results_eps_0.00.txt  constant_results_eps_0.01.txt  constant_results_eps_0.10.txt  plotComparison.m
src/: BanditSolver.cpp  BanditSolver.hpp  CMakeLists.txt  ChangingRewardTestBed.cpp  ChangingRewardTestBed.hpp  Common.hpp  ConstantRewardTestBed.cpp  ConstantRewardTestBed.hpp  ConstantStepSizeEpsilonGreedySolver.cpp  ConstantStepSizeEpsilonGreedySolver.hpp  EpsilonGreedySolver.cpp  EpsilonGreedySolver.hpp  SampleAverageEpsilonGreedySolver.cpp  SampleAverageEpsilonGreedySolver.hpp  TestBed.cpp  TestBed.hpp  TestResult.cpp  TestResult.hpp  main.cpp
src/octave/: drawChangingProblem.m  drawProblem.m  plotChanging.m  plotConstStepAlpha.m  plotConstStepChanging.m  plotConstant.m
